--- a/css/creditoscss.css
+++ b/css/creditoscss.css
@@ -29,13 +29,15 @@ header img {
 
 .botonesIndex{
     background-color: #edeae1;
-    height: 40px;
+    height: 60px;
     background-color: #cd2028;
     border-width: 0px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     width: 120px;
     color: white;
     cursor: pointer;
+    font-size: 13px;
+    
 
 }
 .botonesIndex:hover{   
